added redis cache to reduce db data usage